<resources>
    <string name="app_name">Resaik Solutions Task</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="automatic_change_pictures">Automatic change pictures</string>
    <string name="show_all_only_favourites">show </string>
    <string name="show_on_the_serial_number_accident">show on the </string>
    <string name="switching_types_of_animations">switching types of animations</string>
    <string name="image_change_interval">Image change interval</string>
    <string name="doubleClick_backBtn">Press again to exit</string>
    <string name="accident">accident</string>
    <string name="serial_number">serial number</string>
    <string name="all">all</string>
    <string name="only_favourites">favourites</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="comment">Comment…</string>
    <string name="Remove_from_favorite">Remove from favorite?</string>
    <string name="Please_Enter_your_Comment">Please Enter your Comment</string>
</resources>
