<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.lego.resaiksolutionstask.fragment.SettingsFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/action_settings"
        android:id="@+id/settingsTitle"
        android:gravity="center"
        android:textStyle="normal|bold"
        android:textSize="22sp"
        android:layout_weight="1" />

    <Switch
        android:text="@string/automatic_change_pictures"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/paramSwitch1"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_gravity="center_vertical">

        <TextView
            android:text="@string/image_change_interval"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/textView"
            android:layout_weight="1"
            android:gravity="center_vertical" />

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numberPicker" />
    </LinearLayout>

    <Switch
        android:text="@string/show_all_only_favourites"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/paramSwitch2"
        android:layout_weight="1"
        android:textOn="@string/all"
        android:textOff="@string/only_favourites" />

    <Switch
        android:text="@string/show_on_the_serial_number_accident"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/paramSwitch3"
        android:layout_weight="1"
        android:textOn="@string/serial_number"
        android:textOff="@string/accident" />

    <Switch
        android:text="@string/switching_types_of_animations"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/paramSwitch4"
        android:layout_weight="1" />

</LinearLayout>
