<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textDialog"
        android:layout_weight="1"
        android:textSize="16sp"
        android:gravity="center" />

    <EditText
        android:id="@+id/dialog_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/comment"
        android:maxLines="1"
        android:layout_weight="1">

    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:padding="5dp"
            android:textColor="#ffffff"
            android:text="@string/submit"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@color/colorPrimaryDark"
            android:padding="5dp"
            android:text="@string/cancel"
            android:layout_weight="1"
            tools:ignore="ButtonStyle,RtlHardcoded" />
    </LinearLayout>

</LinearLayout>